<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Azure"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mpho.instantweather.WeatherInfoActivity"
    tools:showIn="@layout/activity_weather_info">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/weather_info_title"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:id="@+id/weather_icon_imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/weather_icon_image_description"
        android:clickable="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city_txt"
        android:id="@+id/txtv_city"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/weather_icon_imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtv_location_value"
        android:layout_alignTop="@+id/txtv_city"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_temp"
        android:id="@+id/txtv_temp_txt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtv_city"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtv_temp_value"
        android:layout_alignTop="@+id/txtv_temp_txt"
        android:layout_alignLeft="@+id/txtv_location_value"
        android:layout_alignStart="@+id/txtv_location_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_max_temp"
        android:id="@+id/txtv_max_temp_txt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtv_temp_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtv_max_temp_value"
        android:layout_alignTop="@+id/txtv_max_temp_txt"
        android:layout_alignLeft="@+id/txtv_temp_value"
        android:layout_alignStart="@+id/txtv_temp_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_min_temp"
        android:id="@+id/txtv_min_temp_txt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtv_max_temp_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtv_min_temp_value"
        android:layout_alignTop="@+id/txtv_min_temp_txt"
        android:layout_alignLeft="@+id/txtv_max_temp_value"
        android:layout_alignStart="@+id/txtv_max_temp_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txtv_humidity_txt"
        android:id="@+id/txtv_humidity_txt"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/txtv_min_temp_txt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/txtv_humidity_value"
        android:layout_alignTop="@+id/txtv_humidity_txt"
        android:layout_alignLeft="@+id/txtv_min_temp_value"
        android:layout_alignStart="@+id/txtv_min_temp_value" />

</RelativeLayout>
